version/0.20/_sources/api/solver/_autosummary/settings/reference_direction.rst.txt
:orphan:

.. _reference_direction:

reference_direction
===================

.. autoclass:: ansys.fluent.core.solver.settings_241.reference_direction.reference_direction
    :show-inheritance:

.. rubric:: Methods

========================================   =======================================

Method                                                                     Summary

========================================   =======================================
:ref:`list_properties <list_properties>`       List properties of selected object.

========================================   =======================================

.. rubric:: Named object type

:ref:`reference_frame_velocity_child <reference_frame_velocity_child>`


.. rubric:: Included in:

================================   =======================

Parent                                             Summary

================================   =======================
:ref:`multiphase <multiphase_6>`       Help not available.

================================   =======================

