version/0.27/_sources/api/solver/_autosummary/settings/reference_direction.rst.txt
:orphan:

.. _reference_direction:

reference_direction
===================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.reference_direction
    :show-inheritance:

.. rubric:: Methods

==========================================   ==========================================

Method                                                                          Summary

==========================================   ==========================================
:ref:`list_properties <list_properties_1>`          List properties of selected object.

:ref:`resize <resize>`                           Set number of objects for list-object.

==========================================   ==========================================

.. rubric:: Named object type

:ref:`reference_direction_child <reference_direction_child>`


.. rubric:: Included in:

==================================   ============================================================

Parent                                                                                    Summary

==================================   ============================================================
:ref:`multiphase_6 <multiphase_6>`       Allows to change multiphase model variables or settings.

==================================   ============================================================

